change nav bar to be straight across, fix some spacing, close hamburger on link selection

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,7 +32,7 @@
 
 
 @theme {
-  --color-light-gray-white: #F8F8FF;
+  --color-light-blue-white: #EFF6FF;
   --color-calming-blue: #A7C7E7;
   --color-calming-blue-light: #D1E9FF;
   --color-calming-blue-dark: #7895B2;
